--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <a class="nav_link" href="/">About</a>
+                <a class="nav_link" href="/">Menu</a>
+                <a class="nav_link" href="/">Info</a>
+                <a class="nav_link" href="/">Booking</a>
+            </nav>
+            <div class="name">
+                <img src="/assets/images/latte_caffe.svg" alt="LATTE CAFFE">
+            </div>
+            <div class="socials">
+               <a href="#"><img class="socials_1" src="/assets/images/mail.svg" alt="mail"></a> 
+               <a href="#"><img class="socials_1" src="/assets/images/facebook.svg" alt="facebook"></a>
+               <a href="#"><img class="socials_1" src="/assets/images/inst.svg" alt="instagram"></a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
