add first section

--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="section_1">
+            <div>
+                <img class="ambient_1" src="/assets/images/1st_ambient.jpg" alt="ambient poto">
+            </div>
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
 </body>
 </html>
