--- a/index.html
+++ b/index.html
@@ -37,8 +37,24 @@
                 <img class="ambient_1" src="/assets/images/1st_ambient.jpg" alt="ambient poto">
             </div>
         </section>
-        <section></section>
-        <section></section>
+        <section class="section_2">
+            <div class="about">
+                <h5 class="about_us">About us</h5>
+                <p class="about_us_text">Tucked away in the corner of Wellington, Latte Cafe is a local neighbourhood cafe and bar. Latte is all about doing what we love, in a city that we love. We keep stocked with local produce and pastries. Bring your family for a bite, or meet your friends for a coffee or warm drink.</p>
+            </div>
+        </section>
+        <section class="section_3">
+            <div>
+                <div>
+                    
+                    <div>
+                        <h4>Menu</h4>
+                        <p>We change our menu every season. Here is what we are currently dishing up.</p>
+                    </div>
+                    <img src="/assets/images/menu.jpg" alt="Menu">
+                </div>         
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
